# cpp-game

./: .gitignore  CMakeLists.txt  LICENSE  imgui.ini
src/: main.cpp
src/game/: config.h  debug_gui.h  ecs.cpp  ecs.h  frame.cpp  frame.h  game.cpp  game.h
src/game/debug/: context.h  local_app.h  manager.cpp  manager.h  window.cpp  window.h
src/game/debug/window/: performance.cpp  performance.h  schedule.cpp  schedule.h  scheduler.cpp  scheduler.h
src/sai/: handle.h  job.cpp  job.h  performance_profiler.cpp  performance_profiler.h  task.cpp  task.h  task_arg.h  task_arg_ex.h  threading.h
src/sai/asset/: asset.cpp  asset.h  fwd.cpp  fwd.h  manager.cpp  manager.h
src/sai/core/: core.cpp  core.h  frame.cpp  frame.h  fwd.cpp  fwd.h
src/sai/debug/: fwd.cpp  fwd.h  gui.cpp  gui.h  performance.cpp  performance.h
src/sai/ecs/: archetype.h  chunk.h  entity.h  query.h  registry.h  tuple.h  type.h
src/sai/graphics/: color.h  font.cpp  font.h  fwd.cpp  fwd.h  material.cpp  material.h  sprite.cpp  sprite.h  surface.cpp  surface.h  texture.cpp  texture.h
src/sai/input/: fwd.cpp  fwd.h  mouse.cpp  mouse.h
src/sai/job/: executor.cpp  executor.h  job.cpp  job.h
src/sai/sync/: condition.h  mutex.h
src/sai/task/: app.cpp  app.h  app_builder.h  args.h  context.h  context_ref.h  event.h  executor.cpp  executor.h  fwd.h  local_app.h  phase.cpp  phase.h  runner.h  scheduler.cpp  scheduler.h  setup_task.h  task.cpp  task.h
src/sai/threading/: core.h
src/sai/video/: fwd.cpp  fwd.h  video.cpp  video.h
src/t9/: color.h  defer.h  dynamic_tuple.h  function_traits.h  handle.h  hash.h  noncopyable.h  singleton.h  type_list.h
src/t9/ecs/: archetype.h  chunk.h  config.h  entity.h  query.h  registry.h  tuple.h  type.h
src/t9/intrusive/: list.h
